# ovhai-python-sdk

./: AUTHORS  CONTRIBUTORS  LICENSE  MAINTAINERS  Makefile  README.md  pyproject.toml
ov-hcloud-ai-solution-client/: README.md  pyproject.toml
ov-hcloud-ai-solution-client/ov_hcloud_ai_solution_client/models/: app_image.py  app_list.py  app_spec.py  app_state_history.py  app_update_request.py  automatic_scaling_strategy.py  capability_notebook_editor.py  capability_notebook_framework.py  cli_command.py  contract.py  contract_terms_of_service.py  create_framework.py  create_image.py  credentials.py  data_store_volume_source.py  data_sync.py  data_sync_progress.py  data_sync_status.py  doc_url.py  env.py  error.py  info.py  (+43 more)
ovhai/: CONTRIBUTING.md  CONTRIBUTORS  README.md  __init__.py  pyproject.toml  setup.py
ovhai/models/: app.py  app_deployment_strategy.py  app_image.py  app_list.py  app_spec.py  app_spec_labels_type_0.py  app_state_history.py  app_status.py  app_update.py  app_update_image.py  app_update_request.py  capability_notebook_editor.py  capability_notebook_framework.py  cli_command.py  contract.py  create_framework.py  create_image.py  create_image_version.py  create_volume.py  credentials.py  data_store.py  data_store_volume_source.py  data_sync.py  data_sync_progress.py  data_sync_spec.py  data_sync_spec_direction.py  data_sync_status.py  doc_url.py  error.py  fixed_scaling_strategy.py  flavor.py  framework.py  framework_list.py  git_credentials.py  gpu_information.py  https_basic_auth.py  image.py  image_list.py  image_mirror_status.py  image_version.py  (+53 more)
(+183 files in other folders)
